--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>SwansWebapp</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Swans.app</title>
+
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link rel="stylesheet" type="text/css" href="assets/css/one-page-wonder.min.css">
+
 </head>
+
 <body>
+
   <app-root></app-root>
+
+  <!-- Footer -->
+  <footer class="py-5 bg-black">
+    <div class="container">
+      <p class="m-0 text-center text-white small">Copyright &copy; Swans.app 2018</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <script src="https://maps.google.com/maps/api/js?sensor=false&libraries=places&key=AIzaSyB993oF7I38X3PgnAFnZbHxgyQbQY_6_4Q"></script>
+
 </body>
 </html>
